<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory android:title="Location">
        <EditTextPreference
            android:defaultValue="@string/pref_location_default"
            android:inputType="number"
            android:key="@string/pref_location_key"
            android:singleLine="true"
            android:title="@string/pref_location_label" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Formato de Temperatura">
        <ListPreference
            android:defaultValue="@string/pref_units_metric"
            android:entries="@array/pref_units_options"
            android:entryValues="@array/pref_units_values"
            android:key="@string/pref_units_key"
            android:title="@string/pref_units_label"

            />

    </PreferenceCategory>


</PreferenceScreen>


